# akash_x_bot

./: README.md  deploy.yaml  pyproject.toml
configs/: settings.yaml
docker/: Dockerfile
src/: app.py
src/bot/: __init__.py  bot.py
src/configs/: configs.py
src/llm/: openai.py  prompt.py
src/utils/: data.py  logger.py  plot.py  report.py
